# ontocode

./: .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICES  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION.md  mkdocs.yml  mutants.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
crates/ontocore/: Cargo.toml  LICENSE-MIT  README.md
crates/ontocore-catalog/: Cargo.toml  README.md
crates/ontocore-catalog/src/: builder.rs  disk_cache.rs  entity_api.rs  graph.rs  incremental.rs  lib.rs  xml_catalog.rs
crates/ontocore-cli/: Cargo.toml  README.md
crates/ontocore-cli/src/: main.rs
crates/ontocore-diagnostics/: Cargo.toml  README.md
crates/ontocore-diagnostics/src/: config.rs  engine.rs  input.rs  lib.rs  location.rs
crates/ontocore-diagnostics/src/rules/: broken_imports.rs  duplicate_labels.rs  missing_labels.rs  orphan_classes.rs  parse_errors.rs  undefined_prefixes.rs
crates/ontocore-diff/: Cargo.toml  README.md
crates/ontocore-diff/src/: compare.rs  format.rs  git.rs  lib.rs  model.rs  refs.rs
crates/ontocore-diff/tests/: compare_breaking.rs  git_security.rs
crates/ontocore-docs/: Cargo.toml  README.md
crates/ontocore-docs/src/: lib.rs
crates/ontocore-edit/: Cargo.toml  README.md
crates/ontocore-edit/src/: adapter.rs  change.rs  error.rs  invert.rs  lib.rs  transaction.rs
crates/ontocore-edit/tests/: transaction.rs  xml_writeback.rs
crates/ontocore-lsp/: Cargo.toml  README.md
crates/ontocore-lsp/src/: code_actions.rs  completion.rs  diagnostics.rs  handlers.rs  handlers_test.rs  index_worker.rs  lib.rs  main.rs  protocol.rs  semantic_tokens.rs  state.rs
crates/ontocore-obo/: Cargo.toml  README.md
crates/ontocore-obo/src/: apply.rs  error.rs  idpolicy.rs  lib.rs  obofoundry.rs  patch.rs  remap.rs
crates/ontocore-owl/: Cargo.toml  README.md
crates/ontocore-owl/src/: apply_xml.rs  bridge.rs  compare.rs  error.rs  lib.rs  links.rs  load.rs  manchester.rs  mutate.rs  patch.rs  remap.rs  render.rs  serialize.rs  span.rs  turtle_lex.rs  util.rs
crates/ontocore-parser/: Cargo.toml  README.md
crates/ontocore-parser/src/: lib.rs  obo.rs  rdf.rs  vocab.rs
crates/ontocore-plugin/: Cargo.toml  README.md
crates/ontocore-plugin-builtins/: Cargo.toml  README.md
crates/ontocore-plugin-builtins/src/: lib.rs
crates/ontocore-plugin-markdown-export/: Cargo.toml  README.md
crates/ontocore-plugin-markdown-export/src/: lib.rs  main.rs
crates/ontocore-plugin-naming/: Cargo.toml  README.md
crates/ontocore-plugin-naming/src/: lib.rs  main.rs
crates/ontocore-plugin-shacl/: Cargo.toml  README.md
crates/ontocore-plugin-shacl/src/: lib.rs  main.rs
crates/ontocore-plugin/fixtures/: builtin-markdown.toml  builtin-naming.toml  builtin-shacl.toml
crates/ontocore-plugin/src/: discovery.rs  host.rs  lib.rs  lifecycle.rs  manifest.rs  protocol.rs  subprocess.rs  traits.rs
crates/ontocore-query/: Cargo.toml  README.md
crates/ontocore-query/src/: lib.rs  schema.rs  sparql.rs  sparql_update.rs  sql.rs
crates/ontocore-refactor/: Cargo.toml  README.md
crates/ontocore-refactor/src/: apply.rs  error.rs  lib.rs  model.rs  ontology.rs  rename.rs  source.rs  text.rs  usages.rs
crates/ontocore-refactor/tests/: refactor_integration.rs
crates/ontocore-refactor/tests/fixtures/: swrl_basic.ttl
crates/ontocore-robot/: Cargo.toml  README.md
crates/ontocore-robot/src/: error.rs  lib.rs  runner.rs
crates/ontocore-swrl/: Cargo.toml  LICENSE-APACHE-2.0  README.md
crates/ontocore-swrl/src/: builtins.rs  lib.rs  model.rs  turtle.rs  validate.rs
crates/ontocore/src/: catalog.rs  diagnostics.rs  diff.rs  docs.rs  edit.rs  error.rs  lib.rs  lsp.rs  obo.rs  owl.rs  parser.rs  plugin.rs  query.rs  reasoner.rs  refactor.rs  swrl.rs  workspace.rs
crates/ontoindex-catalog/: Cargo.toml  README.md
crates/ontoindex-catalog/src/: builder.rs  entity_api.rs  graph.rs  lib.rs
crates/ontoindex-cli/: Cargo.toml  README.md
crates/ontoindex-cli/src/: main.rs
crates/ontoindex-core/: Cargo.toml  README.md
crates/ontoindex-core/src/: document_lookup.rs  error.rs  io.rs  lib.rs  limits.rs  model.rs  path_jail.rs  scanner.rs
crates/ontoindex-diagnostics/: Cargo.toml  README.md
crates/ontoindex-diagnostics/src/: engine.rs  input.rs  lib.rs  location.rs
crates/ontoindex-diagnostics/src/rules/: broken_imports.rs  duplicate_labels.rs  missing_labels.rs  mod.rs  orphan_classes.rs  parse_errors.rs  undefined_prefixes.rs
crates/ontoindex-lsp/: Cargo.toml  README.md
crates/ontoindex-lsp/src/: diagnostics.rs  handlers.rs  handlers_test.rs  index_worker.rs  lib.rs  main.rs  positions.rs  protocol.rs  state.rs
crates/ontoindex-parser/: Cargo.toml  README.md
crates/ontoindex-parser/src/: lib.rs  obo.rs  rdf.rs
crates/ontoindex-query/: Cargo.toml  README.md
crates/ontoindex-query/src/: lib.rs  sparql.rs  sparql_update.rs  sql.rs
crates/ontoindex-reasoner/: Cargo.toml  README.md
crates/ontoindex-reasoner/src/: adapter.rs  cache.rs  el.rs  error.rs  explain.rs  hierarchy.rs  input.rs  lib.rs  rdfs.rs  result.rs  rl.rs  stub.rs
crates/ontoindex-refactor/: Cargo.toml  README.md
crates/ontoindex-refactor/src/: apply.rs  error.rs  lib.rs  model.rs  rename.rs  source.rs  text.rs  usages.rs
crates/ontoindex-refactor/tests/: refactor_integration.rs
docs/: README.md  SHIPPED.md  architecture.md  authoring.md  automation-stability.md  changelog.md  ci-integration.md  cli-reference.md  concepts.md  contributing.md  debugging.md  documentation-index.md  engineering.md  errors.md  faq.md  getting-started.md  glossary.md  index.md  install-cli-ci.md  install.md  internals.md  known-limitations.md  lsp-api.md  lsp-protocol.schema.json  marketplace-publish.md  mutants-baseline.md  patch-reference.md  release-integrity.md  releasing.md  requirements.txt  roadmap-hub.md  roadmap.md  security.md  sparql-reference.md  sql-reference.md  start.md  support.md  supported-formats.md  troubleshooting.md  vision.md  (+3 more)
examples/: README.md  error_handling.rs  index_and_query.rs  (+4 more)
(+756 files in other folders)
