[workspace]
resolver = "2"
members = [
    "crates/ontoindex-core",
    "crates/ontoindex-parser",
    "crates/ontoindex-owl",
    "crates/ontoindex-catalog",
    "crates/ontoindex-diagnostics",
    "crates/ontoindex-query",
    "crates/ontoindex-cli",
    "crates/ontoindex-lsp",
]
default-members = ["crates/ontoindex-cli"]

# Unpublished workspace shell: integration tests and examples only.
# `cargo run --` runs the `ontoindex` CLI (default-member), not this package as a library.
[package]
name = "ontocode"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-parser = { workspace = true }
ontoindex-query = { workspace = true }

[[example]]
name = "index_and_query"
path = "examples/index_and_query.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[dev-dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-parser = { workspace = true }
ontoindex-query = { workspace = true }
ontoindex-lsp = { workspace = true }
ontoindex-owl = { workspace = true }
serde_json.workspace = true
tempfile = "3"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eddiethedean/ontocode"
homepage = "https://github.com/eddiethedean/ontocode"
authors = ["OntoCode Contributors"]
keywords = ["ontology", "owl", "rdf", "sparql", "turtle"]
categories = ["command-line-utilities", "science", "parser-implementations"]

[workspace.dependencies]
ontoindex-core = { path = "crates/ontoindex-core", version = "0.5.0" }
ontoindex-parser = { path = "crates/ontoindex-parser", version = "0.5.0" }
ontoindex-owl = { path = "crates/ontoindex-owl", version = "0.5.0" }
ontoindex-catalog = { path = "crates/ontoindex-catalog", version = "0.5.0" }
ontoindex-diagnostics = { path = "crates/ontoindex-diagnostics", version = "0.5.0" }
ontoindex-query = { path = "crates/ontoindex-query", version = "0.5.0" }
ontoindex-lsp = { path = "crates/ontoindex-lsp", version = "0.5.0" }

lsp-server = "0.7"
lsp-types = "0.97"
url = "2"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hex = "0.4"
ignore = "0.4"
oxigraph = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlparser = "0.53"
thiserror = "2"
horned-owl = "1.4"
horned-functional = "0.4"
[profile.release]
lto = true
codegen-units = 1
