[workspace]
resolver = "2"
members = [
    "crates/ontocore",
    "crates/ontocore-core",
    "crates/ontocore-parser",
    "crates/ontocore-owl",
    "crates/ontocore-catalog",
    "crates/ontocore-diagnostics",
    "crates/ontocore-query",
    "crates/ontocore-reasoner",
    "crates/ontocore-robot",
    "crates/ontocore-refactor",
    "crates/ontocore-cli",
    "crates/ontocore-lsp",
]
default-members = ["crates/ontocore-cli"]

# Unpublished workspace shell: integration tests and examples only.
# `cargo run --` runs the `ontocore` CLI (default-member), not this package as a library.
[package]
name = "ontocode"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ontocore = { workspace = true }

[[example]]
name = "index_and_query"
path = "examples/index_and_query.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "ontocore_workspace"
path = "examples/ontocore_workspace.rs"

[dev-dependencies]
ontocore = { workspace = true }
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-parser = { workspace = true }
ontocore-query = { workspace = true }
ontocore-lsp = { workspace = true }
ontocore-reasoner = { workspace = true }
ontocore-owl = { workspace = true }
serde_json.workspace = true
tempfile = "3"

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eddiethedean/ontocode"
homepage = "https://github.com/eddiethedean/ontocode"
authors = ["OntoCode Contributors"]
keywords = ["ontology", "owl", "rdf", "sparql", "turtle"]
categories = ["command-line-utilities", "science", "parser-implementations"]

[workspace.dependencies]
ontocore = { path = "crates/ontocore", version = "0.9.0" }
ontocore-core = { path = "crates/ontocore-core", version = "0.9.0" }
ontocore-parser = { path = "crates/ontocore-parser", version = "0.9.0" }
ontocore-owl = { path = "crates/ontocore-owl", version = "0.9.0" }
ontocore-catalog = { path = "crates/ontocore-catalog", version = "0.9.0" }
ontocore-diagnostics = { path = "crates/ontocore-diagnostics", version = "0.9.0" }
ontocore-query = { path = "crates/ontocore-query", version = "0.9.0" }
ontocore-lsp = { path = "crates/ontocore-lsp", version = "0.9.0" }
ontocore-reasoner = { path = "crates/ontocore-reasoner", version = "0.9.0" }
ontocore-robot = { path = "crates/ontocore-robot", version = "0.9.0" }
ontocore-refactor = { path = "crates/ontocore-refactor", version = "0.9.0" }

ontologos-core = "1.0.0"
ontologos-parser = "1.0.0"
ontologos-profile = "1.0.0"
ontologos-el = "1.0.0"
ontologos-rl = "1.0.0"
ontologos-dl = "1.0.0"
ontologos-facade = "1.0.0"
ontologos-explain = "1.0.0"
ontologos-bridge = "1.0.0"

lsp-server = "0.7"
lsp-types = "0.97"
url = "2"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hex = "0.4"
ignore = "0.4"
oxigraph = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlparser = "0.53"
thiserror = "2"
horned-owl = "1.4"
fastobo = "0.15"
fastobo-owl = "0.3"
fastobo-validator = "0.4"
petgraph = "0.8"

[profile.release]
lto = true
codegen-units = 1
