[workspace]
resolver = "2"
members = [
    "crates/ontocore",
    "crates/ontocore-core",
    "crates/ontocore-parser",
    "crates/ontocore-owl",
    "crates/ontocore-obo",
    "crates/ontocore-catalog",
    "crates/ontocore-diagnostics",
    "crates/ontocore-query",
    "crates/ontocore-reasoner",
    "crates/ontocore-robot",
    "crates/ontocore-refactor",
    "crates/ontocore-diff",
    "crates/ontocore-docs",
    "crates/ontocore-edit",
    "crates/ontocore-cli",
    "crates/ontocore-lsp",
    "crates/ontocore-plugin",
    "crates/ontocore-plugin-naming",
    "crates/ontocore-plugin-markdown-export",
    "crates/ontocore-plugin-shacl",
    "crates/ontocore-plugin-builtins",
]
default-members = ["crates/ontocore-cli"]

# Unpublished workspace shell: integration tests and examples only.
# `cargo run --` runs the `ontocore` CLI (default-member), not this package as a library.
[package]
name = "ontocode"
version = "0.21.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ontocore = { workspace = true }

[[example]]
name = "index_and_query"
path = "examples/index_and_query.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "ontocore_workspace"
path = "examples/ontocore_workspace.rs"

[[example]]
name = "semantic_diff"
path = "examples/semantic_diff.rs"

[[example]]
name = "workspace_operations"
path = "examples/workspace_operations.rs"

[dev-dependencies]
ontocore = { workspace = true }
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-parser = { workspace = true }
ontocore-query = { workspace = true }
ontocore-lsp = { workspace = true }
ontocore-reasoner = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-obo = { workspace = true }
ontocore-plugin-builtins = { workspace = true }
serde_json.workspace = true
fastobo.workspace = true
tempfile = "3"

[workspace.package]
version = "0.21.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eddiethedean/ontocode"
homepage = "https://github.com/eddiethedean/ontocode"
authors = ["OntoCode Contributors"]
keywords = ["ontology", "owl", "rdf", "sparql", "turtle"]
categories = ["command-line-utilities", "science", "parser-implementations"]

[workspace.dependencies]
ontocore = { path = "crates/ontocore", version = "0.21.0" }
ontocore-core = { path = "crates/ontocore-core", version = "0.21.0" }
ontocore-parser = { path = "crates/ontocore-parser", version = "0.21.0" }
ontocore-owl = { path = "crates/ontocore-owl", version = "0.21.0" }
ontocore-obo = { path = "crates/ontocore-obo", version = "0.21.0" }
ontocore-catalog = { path = "crates/ontocore-catalog", version = "0.21.0" }
ontocore-diagnostics = { path = "crates/ontocore-diagnostics", version = "0.21.0" }
ontocore-query = { path = "crates/ontocore-query", version = "0.21.0" }
ontocore-lsp = { path = "crates/ontocore-lsp", version = "0.21.0" }
ontocore-reasoner = { path = "crates/ontocore-reasoner", version = "0.21.0" }
ontocore-robot = { path = "crates/ontocore-robot", version = "0.21.0" }
ontocore-refactor = { path = "crates/ontocore-refactor", version = "0.21.0" }
ontocore-diff = { path = "crates/ontocore-diff", version = "0.21.0" }
ontocore-docs = { path = "crates/ontocore-docs", version = "0.21.0" }
ontocore-plugin = { path = "crates/ontocore-plugin", version = "0.21.0" }
ontocore-plugin-naming = { path = "crates/ontocore-plugin-naming", version = "0.21.0" }
ontocore-plugin-markdown-export = { path = "crates/ontocore-plugin-markdown-export", version = "0.21.0" }
ontocore-plugin-shacl = { path = "crates/ontocore-plugin-shacl", version = "0.21.0" }
ontocore-edit = { path = "crates/ontocore-edit", version = "0.21.0" }
ontocore-plugin-builtins = { path = "crates/ontocore-plugin-builtins", version = "0.21.0" }

git2 = { version = "0.20", features = ["vendored-openssl"] }

ontologos-core = "1.1.1"
ontologos-parser = "1.1.1"
ontologos-profile = "1.1.1"
ontologos-el = "1.1.1"
ontologos-rl = "1.1.1"
ontologos-dl = "1.1.1"
ontologos-facade = "1.1.1"
ontologos-explain = "1.1.1"
ontologos-bridge = "1.1.1"

lsp-server = "0.7"
lsp-types = "0.97"
url = "2"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hex = "0.4"
ignore = "0.4"
oxigraph = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
sqlparser = "0.53"
thiserror = "2"
horned-owl = "1.4"
fastobo = "0.15"
fastobo-owl = "0.3"
fastobo-validator = "0.4"
petgraph = "0.8"
minijinja = "2"
pulldown-cmark = "0.13"

[profile.release]
lto = true
codegen-units = 1
