[package]
name = "ontocore-catalog"
description = "Semantic catalog for OntoCore (ontocore-*)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-core = { workspace = true }
ontocore-diagnostics = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-parser = { workspace = true }
oxigraph.workspace = true
serde.workspace = true
thiserror.workspace = true
