[package]
name = "ontocore-cli"
description = "CLI for OntoCore (ontocore-*) ontology indexing and querying"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[[bin]]
name = "ontocore"
path = "src/main.rs"

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-obo = { workspace = true }
ontocore-query = { workspace = true }
ontocore-reasoner = { workspace = true }
ontocore-refactor = { workspace = true }
ontocore-robot = { workspace = true }
ontocore-diff = { workspace = true }
ontocore-docs = { workspace = true }
ontocore-plugin-builtins = { workspace = true }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
