[package]
name = "ontocore-diagnostics"
description = "Ontology lint rules and diagnostic collection for OntoCore (ontocore-*)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-core = { workspace = true }
regex = "1"
serde_json = { workspace = true }
