[package]
name = "ontocore-docs"
description = "Markdown and HTML documentation export for OntoCore workspaces"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
minijinja = "2"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
