[package]
name = "ontocore-edit"
description = "Semantic transaction model for OntoCore ontology editing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["ontology", "owl", "edit", "transaction"]
categories = ["science"]
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-core = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-obo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
