[package]
name = "ontocore-lsp"
description = "Language server for OntoCode (OntoCore LSP via ontocore-lsp)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[lib]
name = "ontocore_lsp"
path = "src/lib.rs"

[[bin]]
name = "ontocore-lsp"
path = "src/main.rs"

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-edit = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-obo = { workspace = true }
ontocore-query = { workspace = true }
ontocore-reasoner = { workspace = true }
ontocore-refactor = { workspace = true }
ontocore-robot = { workspace = true }
ontocore-diff = { workspace = true }
ontocore-plugin-builtins = { workspace = true }
ontocore-plugin = { workspace = true }
lsp-server.workspace = true
lsp-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url.workspace = true
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
