[package]
name = "ontocore-owl"
description = "Horned-OWL facade for OntoCore (ontocore-*) axiom modeling and patch write-back"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-core = { workspace = true }
curie = "0.1"
horned-owl.workspace = true
oxigraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
