[package]
name = "ontocore-plugin-builtins"
description = "Built-in reference plugin registration for OntoCore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
ontocore-plugin = { workspace = true }
ontocore-plugin-naming = { workspace = true }
ontocore-plugin-markdown-export = { workspace = true }
ontocore-plugin-shacl = { workspace = true }
