[package]
name = "ontocore-plugin-markdown-export"
description = "Markdown documentation exporter plugin for OntoCore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "ontocore_plugin_markdown_export"
path = "src/lib.rs"

[[bin]]
name = "ontocore-plugin-markdown-export"
path = "src/main.rs"

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-docs = { workspace = true }
ontocore-plugin = { workspace = true }
serde_json.workspace = true
clap = { workspace = true }
