[package]
name = "ontocore-plugin-naming"
description = "Naming convention validator plugin for OntoCore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "ontocore_plugin_naming"
path = "src/lib.rs"

[[bin]]
name = "ontocore-plugin-naming"
path = "src/main.rs"

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-plugin = { workspace = true }
serde_json.workspace = true
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
