[package]
name = "ontocore-plugin-shacl"
description = "SHACL validator plugin for OntoCore (rudof adapter)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "ontocore_plugin_shacl"
path = "src/lib.rs"

[[bin]]
name = "ontocore-plugin-shacl"
path = "src/main.rs"

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-plugin = { workspace = true }
serde_json.workspace = true
clap = { workspace = true }
