[package]
name = "ontocore-plugin"
description = "Plugin manifest discovery for OntoCore (v0.14 host foundation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
serde = { workspace = true }
thiserror.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
