[package]
name = "ontocore-query"
description = "SQL-like and SPARQL query engine for OntoCore (ontocore-*)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
csv.workspace = true
oxigraph.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
thiserror.workspace = true

[dev-dependencies]
ontocore-catalog = { workspace = true }
