[package]
name = "ontocore-refactor"
description = "Workspace refactoring for OntoCore (ontocore-*) (rename, migrate, move, extract)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-owl = { workspace = true }
ontocore-obo = { workspace = true }
ontocore-swrl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
