[package]
name = "ontocore"
description = "OntoCore — semantic workspace engine for ontology development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[features]
default = ["lsp"]
lsp = ["dep:ontocore-lsp"]

[dependencies]
ontocore-catalog = { workspace = true }
ontocore-core = { workspace = true }
ontocore-diagnostics = { workspace = true }
ontocore-lsp = { workspace = true, optional = true }
ontocore-owl = { workspace = true }
ontocore-parser = { workspace = true }
ontocore-query = { workspace = true }
ontocore-reasoner = { workspace = true }
ontocore-refactor = { workspace = true }

[dev-dependencies]
tempfile = "3"
