[package]
name = "ontoindex-catalog"
description = "Semantic catalog for OntoIndex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ontoindex-core = { workspace = true }
ontoindex-parser = { workspace = true }
oxigraph.workspace = true
serde.workspace = true
thiserror.workspace = true
