[package]
name = "ontoindex-cli"
description = "CLI for OntoIndex ontology indexing and querying"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ontoindex"
path = "src/main.rs"

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-query = { workspace = true }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
