[package]
name = "ontoindex-cli"
description = "CLI for OntoIndex ontology indexing and querying"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[[bin]]
name = "ontoindex"
path = "src/main.rs"

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-owl = { workspace = true }
ontoindex-query = { workspace = true }
ontoindex-reasoner = { workspace = true }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
