[package]
name = "ontoindex-core"
description = "Core types and workspace scanner for OntoIndex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hex.workspace = true
ignore.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
