[package]
name = "ontoindex-diagnostics"
description = "Ontology lint rules and diagnostic collection for OntoIndex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontoindex-core = { workspace = true }
regex = "1"
