[package]
name = "ontoindex-lsp"
description = "Language server for OntoCode (OntoCore LSP via ontoindex-lsp)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[lib]
name = "ontoindex_lsp"
path = "src/lib.rs"

[[bin]]
name = "ontoindex-lsp"
path = "src/main.rs"

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-owl = { workspace = true }
ontoindex-query = { workspace = true }
ontoindex-reasoner = { workspace = true }
ontoindex-refactor = { workspace = true }
ontoindex-robot = { workspace = true }
lsp-server.workspace = true
lsp-types.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url.workspace = true
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
