[package]
name = "ontoindex-query"
description = "SQL-like and SPARQL query engine for OntoIndex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
csv.workspace = true
oxigraph.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
