[package]
name = "ontoindex-reasoner"
description = "OntoLogos-backed reasoner facade for OntoIndex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontologos-bridge.workspace = true
ontologos-core.workspace = true
ontologos-el.workspace = true
ontologos-explain.workspace = true
ontologos-parser.workspace = true
ontologos-profile.workspace = true
ontologos-query.workspace = true
ontologos-rdfs.workspace = true
ontologos-rl.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile = "3"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
