[package]
name = "ontoindex-refactor"
description = "Workspace refactoring for OntoIndex (rename, migrate, move, extract)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE-2.0"]

[dependencies]
ontoindex-catalog = { workspace = true }
ontoindex-core = { workspace = true }
ontoindex-owl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
